@@ -7,6 +7,8 @@ v0.9.4 -- xx yyy 2007
 - conform to XEP-0170 (Recommended Order of Stream Feature Negotiation)
 - ConnectionTCPBase: avoid race condition in cleanup()
 - ConnectionTCPBase: reset byte counters on disconnect
+- DataFormBase: added addField( DataFormFieldType, ... )
+- DataFormField: added addOption( string, string )
 
 
 v0.9.3 -- 18 Jul 2007
